app.css
@import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');

:root {
    --metal-red: linear-gradient(to right, #310202 0% 25%, #6A0F0F 50%, #310202 75% 100%);
    --metal-grey: linear-gradient(#000000, #FFFFFF, #000000);
    --focus-color: cornflowerblue;
    --primary: #000E16;
    --custom-color-1: hsl(0, 0%, 0%);
    --custom-color-2: hsl(0, 97%, 14%);
    --custom-color-3: hsl(186, 88%, 20%);
    --custom-color-4: hsl(234, 93%, 12%);
    --custom-color-5: hsl(261, 93%, 12%);
    --custom-color-6: hsl(22, 85%, 43%);
    --custom-color-7: hsl(0, 86%, 34%);
    --custom-color-8: hsl(56, 90%, 49%);
    --custom-color-9: hsl(130, 94%, 14%);
    --custom-color-10: hsl(129, 91%, 5%);
}

/*-------Elements-------*/

* {
    box-sizing: border-box;
}
*::after, *::before{
    box-sizing: inherit;
    margin: 0; 
    padding: 0; 
}

body {
    margin: 0;
    padding: 0;
    background-color: #000000;
}

a, p, label, h1, h2, h3, h4 {
    font-family: 'Goldman';
    margin: 0;      
    color: white;
}

:focus-visible {
    box-shadow: 0 0 5px 3px var(--focus-color);
    outline: none;
}

h1,
h2:not(:has(> span)),
h3:not(:has(> span)),
span {
    background-image: var(--metal-grey);
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

h3 {
    font-size: 2em;
}

label {
    display: block;
    color: white;
}

input, textarea {
    /* background-image: var(--metal-grey-light); */
    border: none;
    border-radius: 2px;
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px inset;
    font-family: Arial, Helvetica, sans-serif;
}

textarea::placeholder {
    line-height: 2rem;
}

input {
    height: 3em;
}

textarea {
    height: 5em;
    resize: vertical;
    max-height: 50rem;
    min-height: 1em;
    width: 100%;
}

button {
    cursor: pointer;
    padding: 0;
}

a:-webkit-any-link {
    color: white;
    text-decoration: none;
}

a {
    cursor: pointer;
}

ul {
    list-style: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
}

li {
    list-style: none;
    text-decoration: none;
    color: white;
}

img {
    max-width: 100%;
}


/*---------------------*/

/*-------Classes-------*/

.row {
    display: flex;
    flex-direction: row;
}

.col {
    display: flex;
    flex-direction: column;
}

.full {
    width: auto;
}

.text-wrapper {
    overflow: visible;
}

section.full {  
    height: 40rem;
    justify-content: end;
    padding: 2rem;
}

section.full.img {
    background-size: cover;
}

section.full .text-wrapper {
    height: fit-content;
    width: 50%;
    display: block;
    z-index: 1;
}

section.slanted {
    height: 35rem;
    display: flex;
    flex-flow: row nowrap;
    background-color: var(--primary);
    justify-content: space-between;
    align-items: center;
    border: solid 1rem var(--primary);
}

section.slanted img {
    height: 100%;
    width: 60%;
    clip-path: polygon(0 100%, 0 0, 70% 0, 100% 100%, 0 100%);
    object-fit: cover;
}

section.slanted .text-wrapper {
    height: fit-content;
    padding: 1rem;
    max-width: 40%;
    margin: auto;
}

section.slanted .text-wrapper .button {
    margin-top: 1rem;
}

/*TODO*/
section.slanted.img-right img {
    clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 30% 0);
    order: 1;
}

.justify-start {
    justify-content: flex-start;
}

.justify-center {
    justify-content: center;
}

.justify-end {
    justify-content: flex-end;
}

.align-start {
    align-items: flex-start;
}

.align-center {
    align-items: center;
}

.align-end {
    align-items: flex-end;
}

.justify-between {
    justify-content: space-between;
}

.justify-around {
    justify-content: space-around;
}

.wrap {
    flex-wrap: wrap;
}

.hidden {
    display: none;
}

.no-button {
    color: white;
    background: none;
    border: none;
    font-family: 'Goldman';
}

.button {
    position: relative;
    padding: 1em 2em;
    border: solid 1px white;
    border-radius: 10px;
    background-image: var(--metal-red);
    background-size: 200% 100%;
    background-position: 50% 0;
    color: white;
    font-family: 'Goldman';
    cursor: pointer;
    width: fit-content;
    transition: all 200ms ease-out;
}

.button:hover,
.button-visible {
    background-position: 80% 0;
}

.img {
    background-repeat: no-repeat;
    background-size: contain;
    max-width: 100%;
    background-position: center;
}

.parallax {
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

.hidden {
    visibility: hidden;
}

.card-grid {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    grid-template-columns: repeat(4, 1fr);
    gap: 81px;
    max-width: 1300px;
    padding: 20px;
}
.card-grid-2{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    grid-template-columns: repeat(4, 1fr);
    gap: 81px;
    max-width: 5%;
    margin: 50px auto;
}
.card-container {
    max-width: 5%;
    margin: 50px auto;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 25px;
    padding: 2rem;
}

.card-container-2{
    display: flex;
    justify-items: space-evenly;
    align-items: ce;
    margin: 25px auto;
    flex-wrap: wrap;
    gap: 25px;
    padding: 2rem;
}

.card {
    background-color: #c4c4c4;
    box-shadow: 0 0 10px;
    font-size: 17px;
}
.card-2{
    background-color: #c4c4c4;
    box-shadow: 0 0 10px;
    font-size: 17px;
}

.card img{
    background-image: url("pics/no-photo.jpg");
    width: 304px;
    height: auto; 
}

.first-4{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.rich-img{
    display: flex;
    justify-content: flex-start;
} 
/* ... */

